public abstract class Producto {
    private String nombre;
    private double precio;
    public void Producto(String nombre, double precio);
    public double calcularPrecioFinal();
    public String toString();
}
